--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,21 @@
             "email": "pedrotiagojesus1995@gmail.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
-            "App\\Controllers\\": ["app/controllers"],
-            "App\\System\\": ["app/system"]
+            "App\\Controllers\\": [
+                "app/controllers"
+            ],
+            "App\\System\\": [
+                "app/system"
+            ]
         },
         "files": [
             "app/config.php",
             "app/helpers/Functions.php"
         ]
+    },
+    "require": {
+        "pear/http_request2": "^2.6"
     }
 }
